// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`M0 golden scenario matrix > GEO > 'geo-budget-unavailable' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "input": "Selected GEO route",
        "label": "RF path",
        "output": "No complete budget",
        "tone": "warn",
        "transformation": "Await paired uplink and downlink budget evidence.",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "Awaiting link closure",
      "label": "Selected MODCOD",
      "tone": "warn",
      "value": "--",
    },
    {
      "label": "RF margin",
      "tone": "warn",
      "value": "--",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "--",
    },
    {
      "detail": "Network layer not available",
      "label": "Contention",
      "tone": "good",
      "value": "--",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "--",
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "latencyLabel": undefined,
    "latencyMs": undefined,
    "marginDb": null,
    "supportingMetrics": [
      {
        "detail": undefined,
        "label": "MODCOD",
        "value": "--",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": null,
  },
  "status": "no-budget",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "GEO engineering analysis",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "GEO route resolved",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "pending",
        "summary": "Budget unavailable",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "not-evaluated",
        "summary": "Not available",
      },
    ],
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Complete uplink and downlink RF evidence unavailable",
    "diagnosticMetrics": [],
    "headline": "RF budget unavailable — complete segment evidence missing",
    "nextAction": "Inspect path evidence and frequency assumptions.",
    "primaryMetrics": [],
    "state": "budget-unavailable",
    "summary": "The path is resolved, but no link budget conclusion can be produced.",
    "technology": "GEO",
    "tone": "neutral",
    "topology": "STAR_FORWARD",
  },
  "why": {
    "explanation": "A paired uplink/downlink RF budget is required before margin and delivered throughput can be closed.",
    "headline": "No complete GEO RF path is available.",
    "tone": "default",
  },
}
`;

exports[`M0 golden scenario matrix > GEO > 'geo-incomplete-site-b-required' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "input": "Selected GEO route",
        "label": "RF path",
        "output": "No complete budget",
        "tone": "warn",
        "transformation": "Await paired uplink and downlink budget evidence.",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "Awaiting link closure",
      "label": "Selected MODCOD",
      "tone": "warn",
      "value": "--",
    },
    {
      "label": "RF margin",
      "tone": "warn",
      "value": "--",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "--",
    },
    {
      "detail": "Network layer not available",
      "label": "Contention",
      "tone": "good",
      "value": "--",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "--",
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "latencyLabel": undefined,
    "latencyMs": undefined,
    "marginDb": null,
    "supportingMetrics": [
      {
        "detail": undefined,
        "label": "MODCOD",
        "value": "--",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": null,
  },
  "status": "no-budget",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "GEO engineering analysis",
  "truth": {
    "causeChain": [
      {
        "detail": "Site B is required",
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "blocked",
        "summary": "Incomplete",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "not-evaluated",
        "summary": "Not available",
      },
    ],
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Site B is required",
    "diagnosticMetrics": [],
    "headline": "Scenario incomplete — Site B is required",
    "nextAction": "Complete the missing endpoint or scenario input.",
    "primaryMetrics": [],
    "state": "incomplete",
    "summary": "Complete the scenario before end-to-end service can be evaluated.",
    "technology": "GEO",
    "tone": "neutral",
    "topology": "MESH",
  },
  "why": {
    "explanation": "A paired uplink/downlink RF budget is required before margin and delivered throughput can be closed.",
    "headline": "No complete GEO RF path is available.",
    "tone": "default",
  },
}
`;

exports[`M0 golden scenario matrix > GEO > 'geo-mesh-forward' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "detail": "Margin 3.2 dB",
        "input": "Ku Europe",
        "label": "Uplink",
        "output": "18.0 dB C/N",
        "tone": "accent",
        "transformation": "Apply uplink EIRP, slant range, rain and terminal/gateway G/T.",
        "value": "18.0 dB",
      },
      {
        "detail": "EUTELSAT TEST",
        "input": "18.0 dB",
        "label": "Payload",
        "output": "EUTELSAT TEST",
        "transformation": "Route through MESH payload.",
        "value": "MESH",
      },
      {
        "detail": "Margin 4.2 dB",
        "input": "Ku Europe",
        "label": "Downlink",
        "output": "20.0 dB C/N",
        "tone": "good",
        "transformation": "Apply downlink EIRP, slant range, rain and receiver G/T.",
        "value": "20.0 dB",
      },
      {
        "detail": "Downlink limiting",
        "input": "18.0 dB / 20.0 dB",
        "label": "Margin",
        "output": "3.2 dB",
        "tone": "good",
        "transformation": "Combine uplink and downlink C/N in the power domain.",
        "value": "3.2 dB",
      },
      {
        "detail": "16APSK 3/4 selected",
        "input": "3.2 dB",
        "label": "RF throughput",
        "output": "187 Mbps",
        "outputMbps": 187,
        "tone": "accent",
        "transformation": "Select 16APSK 3/4 and apply spectral efficiency.",
        "value": "187 Mbps",
      },
      {
        "detail": "92% protocol",
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Protocol efficiency",
        "loss": "-15 Mbps",
        "output": "172 Mbps",
        "outputMbps": 172,
        "tone": "good",
        "transformation": "92% usable payload efficiency.",
        "value": "172 Mbps",
      },
      {
        "detail": "Limit: shared capacity",
        "input": "172 Mbps",
        "inputMbps": 172,
        "label": "Delivered",
        "loss": "-154 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply shared capacity constraint.",
        "value": "18 Mbps",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "2.70 b/s/Hz",
      "label": "Selected MODCOD",
      "tone": "accent",
      "value": "16APSK 3/4",
    },
    {
      "label": "RF margin",
      "tone": "good",
      "value": "3.2 dB",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "DOWNLINK",
    },
    {
      "detail": "92% protocol efficiency",
      "label": "Contention",
      "tone": "warn",
      "value": "4.2x",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "shared capacity",
    "confidence": {
      "detail": undefined,
      "display": "High 84/100",
      "label": "High",
      "score": 84,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": "A → B latency",
    "latencyMs": 271,
    "marginDb": 3.2,
    "supportingMetrics": [
      {
        "detail": "2.70 b/s/Hz",
        "label": "MODCOD",
        "value": "16APSK 3/4",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": 18,
  },
  "status": "available",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "EUTELSAT TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "GEO route resolved",
      },
      {
        "detail": "Downlink is the limiting RF segment",
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "3.2 dB · closes",
      },
      {
        "detail": "Site-to-site GEO uses no shared service gate",
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "warning",
        "summary": "Shared capacity limiting",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "High 84/100",
      "label": "High",
      "score": 84,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Shared capacity",
    "diagnosticMetrics": [],
    "headline": "Service available — constrained by shared capacity",
    "nextAction": "Investigate shared capacity.",
    "primaryMetrics": [
      {
        "detail": "Final rate after protocol and network constraints",
        "display": "18 Mbps",
        "label": "A → B throughput",
        "provenance": "delivered",
        "value": 18,
      },
      {
        "detail": undefined,
        "display": "271.0 ms",
        "label": "A → B latency",
        "provenance": "delivered",
        "value": 271,
      },
    ],
    "state": "constrained",
    "summary": "18 Mbps delivered · 271.0 ms a → b latency.",
    "technology": "GEO",
    "tone": "warn",
    "topology": "MESH",
  },
  "why": {
    "explanation": "Downlink remains the dominant RF segment; protocol efficiency, contention and terminal caps explain the delivered user rate.",
    "headline": "shared capacity reduces available throughput from 187 Mbps to 18 Mbps.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > GEO > 'geo-mesh-reverse' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "detail": "Margin 2.6 dB",
        "input": "Ku Europe",
        "label": "Uplink",
        "output": "16.0 dB C/N",
        "tone": "accent",
        "transformation": "Apply uplink EIRP, slant range, rain and terminal/gateway G/T.",
        "value": "16.0 dB",
      },
      {
        "detail": "EUTELSAT TEST",
        "input": "16.0 dB",
        "label": "Payload",
        "output": "EUTELSAT TEST",
        "transformation": "Route through MESH payload.",
        "value": "MESH",
      },
      {
        "detail": "Margin 3.6 dB",
        "input": "Ku Europe",
        "label": "Downlink",
        "output": "19.0 dB C/N",
        "tone": "good",
        "transformation": "Apply downlink EIRP, slant range, rain and receiver G/T.",
        "value": "19.0 dB",
      },
      {
        "detail": "Downlink limiting",
        "input": "16.0 dB / 19.0 dB",
        "label": "Margin",
        "output": "2.6 dB",
        "tone": "good",
        "transformation": "Combine uplink and downlink C/N in the power domain.",
        "value": "2.6 dB",
      },
      {
        "detail": "16APSK 3/4 selected",
        "input": "2.6 dB",
        "label": "RF throughput",
        "output": "141 Mbps",
        "outputMbps": 141,
        "tone": "accent",
        "transformation": "Select 16APSK 3/4 and apply spectral efficiency.",
        "value": "141 Mbps",
      },
      {
        "detail": "92% protocol",
        "input": "141 Mbps",
        "inputMbps": 141,
        "label": "Protocol efficiency",
        "loss": "no loss",
        "output": "172 Mbps",
        "outputMbps": 172,
        "tone": "good",
        "transformation": "92% usable payload efficiency.",
        "value": "172 Mbps",
      },
      {
        "detail": "Limit: shared capacity",
        "input": "172 Mbps",
        "inputMbps": 172,
        "label": "Delivered",
        "loss": "-159 Mbps",
        "output": "13 Mbps",
        "outputMbps": 13,
        "tone": "good",
        "transformation": "Apply shared capacity constraint.",
        "value": "13 Mbps",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "2.70 b/s/Hz",
      "label": "Selected MODCOD",
      "tone": "accent",
      "value": "16APSK 3/4",
    },
    {
      "label": "RF margin",
      "tone": "warn",
      "value": "2.6 dB",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "DOWNLINK",
    },
    {
      "detail": "92% protocol efficiency",
      "label": "Contention",
      "tone": "warn",
      "value": "4.2x",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "shared capacity",
    "confidence": {
      "detail": undefined,
      "display": "High 84/100",
      "label": "High",
      "score": 84,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": "B → A latency",
    "latencyMs": 273,
    "marginDb": 2.6,
    "supportingMetrics": [
      {
        "detail": "2.70 b/s/Hz",
        "label": "MODCOD",
        "value": "16APSK 3/4",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": 13,
  },
  "status": "available",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "EUTELSAT TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "GEO route resolved",
      },
      {
        "detail": "Downlink is the limiting RF segment",
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "2.6 dB · closes",
      },
      {
        "detail": "Site-to-site GEO uses no shared service gate",
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "warning",
        "summary": "Shared capacity limiting",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "High 84/100",
      "label": "High",
      "score": 84,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Shared capacity",
    "diagnosticMetrics": [],
    "headline": "Service available — constrained by shared capacity",
    "nextAction": "Investigate shared capacity.",
    "primaryMetrics": [
      {
        "detail": "Final rate after protocol and network constraints",
        "display": "13 Mbps",
        "label": "B → A throughput",
        "provenance": "delivered",
        "value": 13,
      },
      {
        "detail": undefined,
        "display": "273.0 ms",
        "label": "B → A latency",
        "provenance": "delivered",
        "value": 273,
      },
    ],
    "state": "constrained",
    "summary": "13 Mbps delivered · 273.0 ms b → a latency.",
    "technology": "GEO",
    "tone": "warn",
    "topology": "MESH",
  },
  "why": {
    "explanation": "Downlink remains the dominant RF segment; protocol efficiency, contention and terminal caps explain the delivered user rate.",
    "headline": "shared capacity reduces available throughput from 141 Mbps to 13 Mbps.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > GEO > 'geo-path-unavailable-no-gateway' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "input": "Selected GEO route",
        "label": "RF path",
        "output": "No complete budget",
        "tone": "warn",
        "transformation": "Await paired uplink and downlink budget evidence.",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "Awaiting link closure",
      "label": "Selected MODCOD",
      "tone": "warn",
      "value": "--",
    },
    {
      "label": "RF margin",
      "tone": "warn",
      "value": "--",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "--",
    },
    {
      "detail": "Network layer not available",
      "label": "Contention",
      "tone": "good",
      "value": "--",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "--",
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "latencyLabel": undefined,
    "latencyMs": undefined,
    "marginDb": null,
    "supportingMetrics": [
      {
        "detail": undefined,
        "label": "MODCOD",
        "value": "--",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": null,
  },
  "status": "no-budget",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "GEO engineering analysis",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": "No eligible traffic gateway path",
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "blocked",
        "summary": "Unavailable",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "not-evaluated",
        "summary": "Not available",
      },
    ],
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "decisiveFactor": "No eligible traffic gateway path",
    "diagnosticMetrics": [],
    "headline": "No service path — No eligible traffic gateway path",
    "nextAction": "Review location, topology, and eligible coverage.",
    "primaryMetrics": [],
    "state": "path-unavailable",
    "summary": "No deliverable GEO result is available for the current route.",
    "technology": "GEO",
    "tone": "neutral",
    "topology": "STAR_FORWARD",
  },
  "why": {
    "explanation": "A paired uplink/downlink RF budget is required before margin and delivered throughput can be closed.",
    "headline": "No complete GEO RF path is available.",
    "tone": "default",
  },
}
`;

exports[`M0 golden scenario matrix > GEO > 'geo-point-to-point' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "detail": "Margin 4.5 dB",
        "input": "Ku Europe",
        "label": "Uplink",
        "output": "18.0 dB C/N",
        "tone": "accent",
        "transformation": "Apply uplink EIRP, slant range, rain and terminal/gateway G/T.",
        "value": "18.0 dB",
      },
      {
        "detail": "EUTELSAT TEST",
        "input": "18.0 dB",
        "label": "Payload",
        "output": "EUTELSAT TEST",
        "transformation": "Route through POINT TO POINT payload.",
        "value": "POINT TO POINT",
      },
      {
        "detail": "Margin 5.5 dB",
        "input": "Ku Europe",
        "label": "Downlink",
        "output": "20.0 dB C/N",
        "tone": "good",
        "transformation": "Apply downlink EIRP, slant range, rain and receiver G/T.",
        "value": "20.0 dB",
      },
      {
        "detail": "Downlink limiting",
        "input": "18.0 dB / 20.0 dB",
        "label": "Margin",
        "output": "4.5 dB",
        "tone": "good",
        "transformation": "Combine uplink and downlink C/N in the power domain.",
        "value": "4.5 dB",
      },
      {
        "detail": "16APSK 3/4 selected",
        "input": "4.5 dB",
        "label": "RF throughput",
        "output": "187 Mbps",
        "outputMbps": 187,
        "tone": "accent",
        "transformation": "Select 16APSK 3/4 and apply spectral efficiency.",
        "value": "187 Mbps",
      },
      {
        "detail": "92% protocol",
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Protocol efficiency",
        "loss": "-15 Mbps",
        "output": "172 Mbps",
        "outputMbps": 172,
        "tone": "good",
        "transformation": "92% usable payload efficiency.",
        "value": "172 Mbps",
      },
      {
        "detail": "Limit: shared capacity",
        "input": "172 Mbps",
        "inputMbps": 172,
        "label": "Delivered",
        "loss": "-154 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply shared capacity constraint.",
        "value": "18 Mbps",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "2.70 b/s/Hz",
      "label": "Selected MODCOD",
      "tone": "accent",
      "value": "16APSK 3/4",
    },
    {
      "label": "RF margin",
      "tone": "good",
      "value": "4.5 dB",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "DOWNLINK",
    },
    {
      "detail": "92% protocol efficiency",
      "label": "Contention",
      "tone": "warn",
      "value": "4.2x",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "shared capacity",
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "latencyLabel": "A → B latency",
    "latencyMs": 268,
    "marginDb": 4.5,
    "supportingMetrics": [
      {
        "detail": "2.70 b/s/Hz",
        "label": "MODCOD",
        "value": "16APSK 3/4",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": 18,
  },
  "status": "available",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "EUTELSAT TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "GEO route resolved",
      },
      {
        "detail": "Downlink is the limiting RF segment",
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "4.5 dB · closes",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "warning",
        "summary": "Shared capacity limiting",
      },
    ],
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Shared capacity",
    "diagnosticMetrics": [],
    "headline": "Service available — constrained by shared capacity",
    "nextAction": "Investigate shared capacity.",
    "primaryMetrics": [
      {
        "detail": "Final rate after protocol and network constraints",
        "display": "18 Mbps",
        "label": "A → B throughput",
        "provenance": "delivered",
        "value": 18,
      },
      {
        "detail": undefined,
        "display": "268.0 ms",
        "label": "A → B latency",
        "provenance": "delivered",
        "value": 268,
      },
    ],
    "state": "constrained",
    "summary": "18 Mbps delivered · 268.0 ms a → b latency.",
    "technology": "GEO",
    "tone": "warn",
    "topology": "POINT_TO_POINT",
  },
  "why": {
    "explanation": "Downlink remains the dominant RF segment; protocol efficiency, contention and terminal caps explain the delivered user rate.",
    "headline": "shared capacity reduces available throughput from 187 Mbps to 18 Mbps.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > GEO > 'geo-star-forward-blocked-negative-mar…' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "detail": "Margin -1.4 dB",
        "input": "Ku Europe",
        "label": "Uplink",
        "output": "8.0 dB C/N",
        "tone": "danger",
        "transformation": "Apply uplink EIRP, slant range, rain and terminal/gateway G/T.",
        "value": "8.0 dB",
      },
      {
        "detail": "EUTELSAT TEST",
        "input": "8.0 dB",
        "label": "Payload",
        "output": "EUTELSAT TEST",
        "transformation": "Route through STAR FORWARD payload.",
        "value": "STAR FORWARD",
      },
      {
        "detail": "Margin -0.4 dB",
        "input": "Ku Europe",
        "label": "Downlink",
        "output": "14.0 dB C/N",
        "tone": "danger",
        "transformation": "Apply downlink EIRP, slant range, rain and receiver G/T.",
        "value": "14.0 dB",
      },
      {
        "detail": "Uplink limiting",
        "input": "8.0 dB / 14.0 dB",
        "label": "Margin",
        "output": "-1.4 dB",
        "tone": "danger",
        "transformation": "Combine uplink and downlink C/N in the power domain.",
        "value": "-1.4 dB",
      },
      {
        "detail": "QPSK 1/4 selected",
        "input": "-1.4 dB",
        "label": "RF throughput",
        "output": "0 Mbps",
        "outputMbps": 0,
        "tone": "accent",
        "transformation": "Select QPSK 1/4 and apply spectral efficiency.",
        "value": "0 Mbps",
      },
      {
        "detail": "92% protocol",
        "input": "0 Mbps",
        "inputMbps": 0,
        "label": "Protocol efficiency",
        "loss": "no loss",
        "output": "0 Mbps",
        "outputMbps": 0,
        "tone": "good",
        "transformation": "92% usable payload efficiency.",
        "value": "0 Mbps",
      },
      {
        "detail": "Limit: rf margin",
        "input": "0 Mbps",
        "inputMbps": 0,
        "label": "Delivered",
        "loss": "no loss",
        "output": "0 Mbps",
        "outputMbps": 0,
        "tone": "danger",
        "transformation": "Apply rf margin constraint.",
        "value": "0 Mbps",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "0.49 b/s/Hz",
      "label": "Selected MODCOD",
      "tone": "accent",
      "value": "QPSK 1/4",
    },
    {
      "label": "RF margin",
      "tone": "warn",
      "value": "-1.4 dB",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "UPLINK",
    },
    {
      "detail": "92% protocol efficiency",
      "label": "Contention",
      "tone": "good",
      "value": "1.0x",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "rf margin",
    "confidence": {
      "detail": undefined,
      "display": "Medium 74/100",
      "label": "Medium",
      "score": 74,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": undefined,
    "latencyMs": 548,
    "marginDb": -1.4,
    "supportingMetrics": [
      {
        "detail": "0.49 b/s/Hz",
        "label": "MODCOD",
        "value": "QPSK 1/4",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": 0,
  },
  "status": "blocked",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "EUTELSAT TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "GEO route resolved",
      },
      {
        "detail": "Uplink is the limiting RF segment",
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "blocked",
        "summary": "-1.4 dB · does not close",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "not-evaluated",
        "summary": "Not available",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "Medium 74/100",
      "label": "Medium",
      "score": 74,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Uplink RF margin below threshold",
    "diagnosticMetrics": [
      {
        "detail": "Not a deliverable service output",
        "display": "0 Mbps",
        "label": "RF potential",
        "provenance": "rf-potential",
        "value": 0,
      },
      {
        "detail": "Uplink is limiting",
        "display": "-1.4 dB",
        "label": "RF margin",
        "provenance": "diagnostic",
        "value": -1.4,
      },
    ],
    "headline": "Service blocked — uplink link budget failed",
    "nextAction": "Investigate the uplink RF budget.",
    "primaryMetrics": [],
    "state": "blocked",
    "summary": "No delivered throughput is available. RF evidence remains available for diagnosis.",
    "technology": "GEO",
    "tone": "danger",
    "topology": "STAR_FORWARD",
  },
  "why": {
    "explanation": "The combined margin is -1.4 dB, so the link cannot close for the selected terminal, weather and topology.",
    "headline": "The selected route is blocked because uplink C/N is below the closing threshold.",
    "tone": "danger",
  },
}
`;

exports[`M0 golden scenario matrix > GEO > 'geo-star-forward-constrained' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "detail": "Margin 4.5 dB",
        "input": "Ku Europe",
        "label": "Uplink",
        "output": "18.0 dB C/N",
        "tone": "accent",
        "transformation": "Apply uplink EIRP, slant range, rain and terminal/gateway G/T.",
        "value": "18.0 dB",
      },
      {
        "detail": "EUTELSAT TEST",
        "input": "18.0 dB",
        "label": "Payload",
        "output": "EUTELSAT TEST",
        "transformation": "Route through STAR FORWARD payload.",
        "value": "STAR FORWARD",
      },
      {
        "detail": "Margin 5.5 dB",
        "input": "Ku Europe",
        "label": "Downlink",
        "output": "20.0 dB C/N",
        "tone": "good",
        "transformation": "Apply downlink EIRP, slant range, rain and receiver G/T.",
        "value": "20.0 dB",
      },
      {
        "detail": "Downlink limiting",
        "input": "18.0 dB / 20.0 dB",
        "label": "Margin",
        "output": "4.5 dB",
        "tone": "good",
        "transformation": "Combine uplink and downlink C/N in the power domain.",
        "value": "4.5 dB",
      },
      {
        "detail": "16APSK 3/4 selected",
        "input": "4.5 dB",
        "label": "RF throughput",
        "output": "187 Mbps",
        "outputMbps": 187,
        "tone": "accent",
        "transformation": "Select 16APSK 3/4 and apply spectral efficiency.",
        "value": "187 Mbps",
      },
      {
        "detail": "92% protocol",
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Protocol efficiency",
        "loss": "-15 Mbps",
        "output": "172 Mbps",
        "outputMbps": 172,
        "tone": "good",
        "transformation": "92% usable payload efficiency.",
        "value": "172 Mbps",
      },
      {
        "detail": "Limit: shared capacity",
        "input": "172 Mbps",
        "inputMbps": 172,
        "label": "Delivered",
        "loss": "-154 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply shared capacity constraint.",
        "value": "18 Mbps",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "2.70 b/s/Hz",
      "label": "Selected MODCOD",
      "tone": "accent",
      "value": "16APSK 3/4",
    },
    {
      "label": "RF margin",
      "tone": "good",
      "value": "4.5 dB",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "DOWNLINK",
    },
    {
      "detail": "92% protocol efficiency",
      "label": "Contention",
      "tone": "warn",
      "value": "4.2x",
    },
  ],
  "resultSummary": {
    "availabilityLabel": "99.2% indicative",
    "availabilityPct": 99.2,
    "bottleneck": "shared capacity",
    "confidence": {
      "detail": undefined,
      "display": "High 89/100",
      "label": "High",
      "score": 89,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": "Forward latency",
    "latencyMs": 548,
    "marginDb": 4.5,
    "supportingMetrics": [
      {
        "detail": "2.70 b/s/Hz",
        "label": "MODCOD",
        "value": "16APSK 3/4",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": 18,
  },
  "status": "available",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "EUTELSAT TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "GEO route resolved",
      },
      {
        "detail": "Downlink is the limiting RF segment",
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "4.5 dB · closes",
      },
      {
        "detail": "Traffic gateway Rambouillet serves this beam",
        "evidence": [
          {
            "label": "Traffic gateway",
            "state": "passed",
            "value": "Rambouillet",
          },
          {
            "label": "Capability",
            "state": "passed",
            "value": "RBT-KU-01",
          },
        ],
        "id": "service",
        "label": "Service gates",
        "state": "passed",
        "summary": "Allowed",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "warning",
        "summary": "Shared capacity limiting",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "High 89/100",
      "label": "High",
      "score": 89,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Shared capacity",
    "diagnosticMetrics": [],
    "headline": "Service available — constrained by shared capacity",
    "nextAction": "Investigate shared capacity.",
    "primaryMetrics": [
      {
        "detail": "Final rate after protocol and network constraints",
        "display": "18 Mbps",
        "label": "Forward throughput",
        "provenance": "delivered",
        "value": 18,
      },
      {
        "detail": undefined,
        "display": "548.0 ms",
        "label": "Forward latency",
        "provenance": "delivered",
        "value": 548,
      },
      {
        "detail": undefined,
        "display": "99.2% indicative",
        "label": "Availability",
        "provenance": "delivered",
        "value": 99.2,
      },
    ],
    "state": "constrained",
    "summary": "18 Mbps delivered · 548.0 ms forward latency.",
    "technology": "GEO",
    "tone": "warn",
    "topology": "STAR_FORWARD",
  },
  "why": {
    "explanation": "Downlink remains the dominant RF segment; protocol efficiency, contention and terminal caps explain the delivered user rate.",
    "headline": "shared capacity reduces available throughput from 187 Mbps to 18 Mbps.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > GEO > 'geo-star-return-degraded-low-margin' 1`] = `
{
  "closure": {
    "layout": "geo",
    "steps": [
      {
        "detail": "Margin 0.8 dB",
        "input": "Ku Europe",
        "label": "Uplink",
        "output": "18.0 dB C/N",
        "tone": "warn",
        "transformation": "Apply uplink EIRP, slant range, rain and terminal/gateway G/T.",
        "value": "18.0 dB",
      },
      {
        "detail": "EUTELSAT TEST",
        "input": "18.0 dB",
        "label": "Payload",
        "output": "EUTELSAT TEST",
        "transformation": "Route through STAR RETURN payload.",
        "value": "STAR RETURN",
      },
      {
        "detail": "Margin 1.8 dB",
        "input": "Ku Europe",
        "label": "Downlink",
        "output": "20.0 dB C/N",
        "tone": "warn",
        "transformation": "Apply downlink EIRP, slant range, rain and receiver G/T.",
        "value": "20.0 dB",
      },
      {
        "detail": "Downlink limiting",
        "input": "18.0 dB / 20.0 dB",
        "label": "Margin",
        "output": "0.8 dB",
        "tone": "warn",
        "transformation": "Combine uplink and downlink C/N in the power domain.",
        "value": "0.8 dB",
      },
      {
        "detail": "16APSK 3/4 selected",
        "input": "0.8 dB",
        "label": "RF throughput",
        "output": "187 Mbps",
        "outputMbps": 187,
        "tone": "accent",
        "transformation": "Select 16APSK 3/4 and apply spectral efficiency.",
        "value": "187 Mbps",
      },
      {
        "detail": "92% protocol",
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Protocol efficiency",
        "loss": "-15 Mbps",
        "output": "172 Mbps",
        "outputMbps": 172,
        "tone": "good",
        "transformation": "92% usable payload efficiency.",
        "value": "172 Mbps",
      },
      {
        "detail": "Limit: shared capacity",
        "input": "172 Mbps",
        "inputMbps": 172,
        "label": "Delivered",
        "loss": "-154 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply shared capacity constraint.",
        "value": "18 Mbps",
      },
    ],
    "title": "GEO closure path",
    "type": "geo-closure",
  },
  "details": [
    {
      "sections": [
        "Topology",
        "RF Context",
        "Uplink Budget",
        "Payload / Transponder",
        "Downlink Budget",
        "Diagnostics",
      ],
      "summary": "Topology, RF context, uplink budget, payload/transponder, downlink budget, diagnostics and margin stack.",
      "title": "Topology, RF context and segment investigation",
    },
  ],
  "mode": "GEO",
  "quickReferences": [
    {
      "detail": "2.70 b/s/Hz",
      "label": "Selected MODCOD",
      "tone": "accent",
      "value": "16APSK 3/4",
    },
    {
      "label": "RF margin",
      "tone": "warn",
      "value": "0.8 dB",
    },
    {
      "detail": "Derived from the combined uplink and downlink C/N.",
      "label": "Limiting segment",
      "value": "DOWNLINK",
    },
    {
      "detail": "92% protocol efficiency",
      "label": "Contention",
      "tone": "warn",
      "value": "4.2x",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "shared capacity",
    "confidence": {
      "detail": undefined,
      "display": "Medium 71/100",
      "label": "Medium",
      "score": 71,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": "Return latency",
    "latencyMs": 552,
    "marginDb": 0.8,
    "supportingMetrics": [
      {
        "detail": "2.70 b/s/Hz",
        "label": "MODCOD",
        "value": "16APSK 3/4",
      },
    ],
    "throughputLabel": "Final throughput",
    "throughputMbps": 18,
  },
  "status": "marginal",
  "subtitle": "Dual-segment RF path with uplink, payload and downlink contributors shown in a wider technical workspace.",
  "title": "EUTELSAT TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "GEO route resolved",
      },
      {
        "detail": "Downlink is the limiting RF segment",
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "warning",
        "summary": "0.8 dB · low margin",
      },
      {
        "detail": "Traffic gateway Rambouillet serves this beam",
        "evidence": [
          {
            "label": "Traffic gateway",
            "state": "passed",
            "value": "Rambouillet",
          },
          {
            "label": "Capability",
            "state": "passed",
            "value": "RBT-KU-01",
          },
        ],
        "id": "service",
        "label": "Service gates",
        "state": "passed",
        "summary": "Allowed",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "warning",
        "summary": "Shared capacity limiting",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "Medium 71/100",
      "label": "Medium",
      "score": 71,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Downlink RF margin is low",
    "diagnosticMetrics": [],
    "headline": "Service degraded — low downlink margin",
    "nextAction": "Investigate shared capacity.",
    "primaryMetrics": [
      {
        "detail": "Final rate after protocol and network constraints",
        "display": "18 Mbps",
        "label": "Return throughput",
        "provenance": "delivered",
        "value": 18,
      },
      {
        "detail": undefined,
        "display": "552.0 ms",
        "label": "Return latency",
        "provenance": "delivered",
        "value": 552,
      },
    ],
    "state": "degraded",
    "summary": "18 Mbps delivered · 552.0 ms return latency.",
    "technology": "GEO",
    "tone": "warn",
    "topology": "STAR_RETURN",
  },
  "why": {
    "explanation": "Downlink remains the dominant RF segment; protocol efficiency, contention and terminal caps explain the delivered user rate.",
    "headline": "shared capacity reduces available throughput from 187 Mbps to 18 Mbps.",
    "tone": "warn",
  },
}
`;

exports[`M0 golden scenario matrix > LEO > 'leo-incomplete-site-b-required' 1`] = `
{
  "closure": {
    "layout": "leo-s2s",
    "steps": [
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Access A",
        "loss": "-175 Mbps",
        "output": "12 Mbps",
        "outputMbps": 12,
        "tone": "warn",
        "transformation": "Apply Site A uplink sharing, feeder and terminal constraints.",
      },
      {
        "input": "--",
        "label": "Backbone",
        "output": "--",
        "tone": "accent",
        "transformation": "Route through indicative terrestrial backbone.",
      },
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Access B",
        "loss": "-169 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply Site B downlink sharing, feeder and terminal constraints.",
      },
      {
        "input": "12 Mbps / 18 Mbps",
        "inputMbps": 18,
        "label": "Delivered",
        "loss": undefined,
        "output": "--",
        "outputMbps": null,
        "tone": "danger",
        "transformation": "Use the lower access throughput for the selected direction.",
      },
    ],
    "title": "LEO site-to-site closure path",
    "type": "leo-closure",
  },
  "details": [
    {
      "sections": [
        "Access A",
        "Satellite/SNP Visibility",
        "Backbone",
        "Access B",
        "Terminal Profiles",
      ],
      "summary": "Access A, satellite/SNP visibility, backbone, Access B, terminal RF profiles and detailed per-site budgets.",
      "title": "Access budgets, backbone and terminal investigation",
    },
  ],
  "mode": "LEO",
  "quickReferences": [
    {
      "detail": "Uplink via ONEWEB-TEST",
      "label": "Source access A",
      "tone": "warn",
      "value": "12 Mbps",
    },
    {
      "detail": "Downlink via ONEWEB-TEST",
      "label": "Destination access B",
      "tone": "good",
      "value": "18 Mbps",
    },
    {
      "detail": "Selected feeder endpoints",
      "label": "SNP pair",
      "value": "--",
    },
    {
      "detail": "-- one-way estimate",
      "label": "Ground segment",
      "value": "Core PoP",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "Site A uplink",
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "latencyLabel": undefined,
    "latencyMs": undefined,
    "marginLabel": "Access margin 14.0 dB",
    "supportingMetrics": [
      {
        "label": "Return direction",
        "value": "--",
      },
    ],
    "throughputLabel": "A → B throughput",
    "throughputMbps": null,
  },
  "status": "available",
  "subtitle": "Site A source · backbone · Site B destination",
  "title": "End-to-End Budget (A → B)",
  "truth": {
    "causeChain": [
      {
        "detail": "Site B is required",
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "blocked",
        "summary": "Incomplete",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "not-evaluated",
        "summary": "Not available",
      },
    ],
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Site B is required",
    "diagnosticMetrics": [
      {
        "detail": "Physical-layer potential before service gates",
        "display": "187 Mbps",
        "label": "RF potential",
        "provenance": "rf-potential",
        "value": 187,
      },
      {
        "detail": "Not a deliverable service output",
        "display": "--",
        "label": "Diagnostic estimate",
        "provenance": "diagnostic",
        "value": null,
      },
    ],
    "headline": "Scenario incomplete — Site B is required",
    "nextAction": "Place the missing endpoint or complete the scenario input.",
    "primaryMetrics": [],
    "state": "incomplete",
    "summary": "Complete the scenario before end-to-end service can be evaluated.",
    "technology": "LEO",
    "tone": "neutral",
    "topology": "SITE_TO_SITE",
  },
  "why": {
    "explanation": "Delivered throughput is pending until both access legs close. Source uplink and destination downlink are compared before the SNP/backbone leg is added; investigate the lower access leg first.",
    "headline": "Both access links and the backbone close for the selected direction.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > LEO > 'leo-path-unavailable' 1`] = `
{
  "closure": {
    "layout": "leo-single",
    "steps": [
      {
        "input": "Serving satellite / SNP",
        "label": "RF path",
        "output": "No budget",
        "tone": "warn",
        "transformation": "Await a complete LEO RF and feeder path.",
      },
    ],
    "title": "LEO throughput closure",
    "type": "leo-closure",
  },
  "details": [
    {
      "sections": [
        "Beam Geometry",
        "RF Context",
        "Downlink Details",
        "Uplink Details",
        "Diagnostics",
      ],
      "summary": "Beam geometry, RF context, downlink details, uplink details, terminal assumptions, diagnostic flow and margin stack.",
      "title": "Beam, RF chain and network investigation",
    },
  ],
  "mode": "LEO",
  "quickReferences": [
    {
      "label": "Serving satellite",
      "value": "--",
    },
    {
      "detail": "MODCOD pending",
      "label": "RF bearer",
      "tone": "warn",
      "value": "--",
    },
    {
      "detail": undefined,
      "label": "Beam sharing",
      "tone": "good",
      "value": "--",
    },
    {
      "detail": undefined,
      "label": "Terminal cap",
      "value": "--",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "--",
    "confidence": {
      "detail": undefined,
      "display": "Low 52/100",
      "label": "Low",
      "score": 52,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": "End-to-end RTT",
    "latencyMs": undefined,
    "marginLabel": undefined,
    "supportingMetrics": [
      {
        "label": "Final uplink",
        "tone": "warn",
        "value": "--",
      },
    ],
    "throughputLabel": "Final downlink",
    "throughputMbps": null,
  },
  "status": "no-budget",
  "subtitle": "RF chain, beam sharing, terminal limits and final user-rate derivation for the active LEO path.",
  "title": "No LEO path",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "blocked",
        "summary": "Unavailable",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "not-evaluated",
        "summary": "Not available",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "Low 52/100",
      "label": "Low",
      "score": 52,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": "No complete LEO/SNP path",
    "diagnosticMetrics": [],
    "headline": "No service path — no complete LEO/SNP route",
    "nextAction": "Review satellite, beam, and SNP availability.",
    "primaryMetrics": [],
    "state": "path-unavailable",
    "summary": "No deliverable LEO result is available for the current path.",
    "technology": "LEO",
    "tone": "neutral",
    "topology": "SINGLE_SITE",
  },
  "why": {
    "explanation": "The workspace will refresh when a serving satellite, beam and SNP path are available.",
    "headline": "No complete LEO RF path is available.",
    "tone": "default",
  },
}
`;

exports[`M0 golden scenario matrix > LEO > 'leo-single-available' 1`] = `
{
  "closure": {
    "layout": "leo-single",
    "steps": [
      {
        "input": "24.0 dB",
        "label": "RF throughput",
        "output": "187 Mbps",
        "outputMbps": 187,
        "tone": "accent",
        "transformation": "16APSK 3/4 converts RF margin into bearer rate.",
      },
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Shared capacity",
        "loss": "-151 Mbps",
        "output": "36 Mbps",
        "outputMbps": 36,
        "tone": "warn",
        "transformation": "Share beam with 14 simulated users.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Feeder (Ka)",
        "output": "36 Mbps",
        "outputMbps": 36,
        "tone": "good",
        "transformation": "Ka feeder closes with 11.5 dB margin — not limiting.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Terminal cap",
        "loss": "no loss",
        "output": "36 Mbps",
        "outputMbps": 36,
        "transformation": "Clamp to OW70L receive capability.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Protocol/handover",
        "loss": "-4 Mbps",
        "output": "32 Mbps",
        "outputMbps": 32,
        "tone": "good",
        "transformation": "Apply 1.00 handover/protocol factor.",
      },
      {
        "input": "32 Mbps",
        "inputMbps": 32,
        "label": "Delivered",
        "loss": "-14 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply final smoothing and delivery guardrails.",
      },
    ],
    "title": "LEO throughput closure",
    "type": "leo-closure",
  },
  "details": [
    {
      "sections": [
        "Beam Geometry",
        "RF Context",
        "Downlink Details",
        "Uplink Details",
        "Diagnostics",
      ],
      "summary": "Beam geometry, RF context, downlink details, uplink details, terminal assumptions, diagnostic flow and margin stack.",
      "title": "Beam, RF chain and network investigation",
    },
  ],
  "mode": "LEO",
  "quickReferences": [
    {
      "label": "Serving satellite",
      "value": "ONEWEB-TEST",
    },
    {
      "detail": "16APSK 3/4",
      "label": "RF bearer",
      "tone": "accent",
      "value": "187 Mbps",
    },
    {
      "detail": "14 simulated users",
      "label": "Beam sharing",
      "tone": "warn",
      "value": "36 Mbps",
    },
    {
      "detail": "OW70L",
      "label": "Terminal cap",
      "value": "200 Mbps",
    },
  ],
  "resultSummary": {
    "availabilityLabel": "98.6% indicative",
    "availabilityPct": 98.6,
    "bottleneck": "None",
    "confidence": {
      "detail": undefined,
      "display": "High 91/100",
      "label": "High",
      "score": 91,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": "End-to-end RTT",
    "latencyMs": 72,
    "marginLabel": "DL 14.0 dB / UL 14.0 dB",
    "supportingMetrics": [
      {
        "label": "Final uplink",
        "tone": "accent",
        "value": "12 Mbps",
      },
    ],
    "throughputLabel": "Final downlink",
    "throughputMbps": 18,
  },
  "status": "available",
  "subtitle": "RF chain, beam sharing, terminal limits and final user-rate derivation for the active LEO path.",
  "title": "ONEWEB-TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "Satellite and ground path resolved",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "Access link closes",
      },
      {
        "detail": undefined,
        "evidence": [
          {
            "label": "RF",
            "state": "passed",
            "value": "Available",
          },
          {
            "label": "SNP",
            "state": "passed",
            "value": "Connected",
          },
          {
            "label": "Regulatory",
            "state": "passed",
            "value": "Allowed",
          },
          {
            "label": "Capacity",
            "state": "passed",
            "value": "No blocking constraint",
          },
        ],
        "id": "service",
        "label": "Service gates",
        "state": "passed",
        "summary": "Allowed",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "passed",
        "summary": "18 Mbps delivered",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "High 91/100",
      "label": "High",
      "score": 91,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": undefined,
    "diagnosticMetrics": [],
    "headline": "Service available",
    "nextAction": undefined,
    "primaryMetrics": [
      {
        "detail": "Final rate after RF, sharing, feeder, handover, and terminal constraints",
        "display": "18 Mbps",
        "label": "Downlink throughput",
        "provenance": "delivered",
        "value": 18,
      },
      {
        "detail": undefined,
        "display": "12 Mbps",
        "label": "Uplink throughput",
        "provenance": "delivered",
        "value": 12,
      },
      {
        "detail": undefined,
        "display": "72.0 ms",
        "label": "End-to-end RTT",
        "provenance": "delivered",
        "value": 72,
      },
      {
        "detail": undefined,
        "display": "98.6% indicative",
        "label": "Availability",
        "provenance": "delivered",
        "value": 98.6,
      },
    ],
    "state": "available",
    "summary": "18 Mbps delivered · 72.0 ms end-to-end rtt.",
    "technology": "LEO",
    "tone": "good",
    "topology": "SINGLE_SITE",
  },
  "why": {
    "explanation": "Beam sharing changes the downlink planning rate from 187 Mbps to 36 Mbps before feeder, handover and terminal limits are applied; investigate the largest loss in the closure chain first.",
    "headline": "The route remains feasible; delivered throughput is 18 Mbps after sharing, network and terminal constraints.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > LEO > 'leo-single-constrained-beam-sharing' 1`] = `
{
  "closure": {
    "layout": "leo-single",
    "steps": [
      {
        "input": "24.0 dB",
        "label": "RF throughput",
        "output": "187 Mbps",
        "outputMbps": 187,
        "tone": "accent",
        "transformation": "16APSK 3/4 converts RF margin into bearer rate.",
      },
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Shared capacity",
        "loss": "-151 Mbps",
        "output": "36 Mbps",
        "outputMbps": 36,
        "tone": "warn",
        "transformation": "Share beam with 14 simulated users.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Feeder (Ka)",
        "output": "36 Mbps",
        "outputMbps": 36,
        "tone": "good",
        "transformation": "Ka feeder closes with 11.5 dB margin — not limiting.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Terminal cap",
        "loss": "no loss",
        "output": "36 Mbps",
        "outputMbps": 36,
        "transformation": "Clamp to OW70L receive capability.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Protocol/handover",
        "loss": "-4 Mbps",
        "output": "32 Mbps",
        "outputMbps": 32,
        "tone": "good",
        "transformation": "Apply 1.00 handover/protocol factor.",
      },
      {
        "input": "32 Mbps",
        "inputMbps": 32,
        "label": "Delivered",
        "loss": "-14 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply final smoothing and delivery guardrails.",
      },
    ],
    "title": "LEO throughput closure",
    "type": "leo-closure",
  },
  "details": [
    {
      "sections": [
        "Beam Geometry",
        "RF Context",
        "Downlink Details",
        "Uplink Details",
        "Diagnostics",
      ],
      "summary": "Beam geometry, RF context, downlink details, uplink details, terminal assumptions, diagnostic flow and margin stack.",
      "title": "Beam, RF chain and network investigation",
    },
  ],
  "mode": "LEO",
  "quickReferences": [
    {
      "label": "Serving satellite",
      "value": "ONEWEB-TEST",
    },
    {
      "detail": "16APSK 3/4",
      "label": "RF bearer",
      "tone": "accent",
      "value": "187 Mbps",
    },
    {
      "detail": "14 simulated users",
      "label": "Beam sharing",
      "tone": "warn",
      "value": "36 Mbps",
    },
    {
      "detail": "OW70L",
      "label": "Terminal cap",
      "value": "200 Mbps",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "DL beam sharing",
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "latencyLabel": "End-to-end RTT",
    "latencyMs": 74,
    "marginLabel": "DL 14.0 dB / UL 14.0 dB",
    "supportingMetrics": [
      {
        "label": "Final uplink",
        "tone": "accent",
        "value": "12 Mbps",
      },
    ],
    "throughputLabel": "Final downlink",
    "throughputMbps": 18,
  },
  "status": "available",
  "subtitle": "RF chain, beam sharing, terminal limits and final user-rate derivation for the active LEO path.",
  "title": "ONEWEB-TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "Satellite and ground path resolved",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "Access link closes",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "passed",
        "summary": "Allowed",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "warning",
        "summary": "Beam sharing limiting",
      },
    ],
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Beam sharing",
    "diagnosticMetrics": [],
    "headline": "Service available — constrained by beam sharing",
    "nextAction": "Investigate beam sharing.",
    "primaryMetrics": [
      {
        "detail": "Final rate after RF, sharing, feeder, handover, and terminal constraints",
        "display": "18 Mbps",
        "label": "Downlink throughput",
        "provenance": "delivered",
        "value": 18,
      },
      {
        "detail": undefined,
        "display": "12 Mbps",
        "label": "Uplink throughput",
        "provenance": "delivered",
        "value": 12,
      },
      {
        "detail": undefined,
        "display": "74.0 ms",
        "label": "End-to-end RTT",
        "provenance": "delivered",
        "value": 74,
      },
    ],
    "state": "constrained",
    "summary": "18 Mbps delivered · 74.0 ms end-to-end rtt.",
    "technology": "LEO",
    "tone": "warn",
    "topology": "SINGLE_SITE",
  },
  "why": {
    "explanation": "Beam sharing changes the downlink planning rate from 187 Mbps to 36 Mbps before feeder, handover and terminal limits are applied; investigate the largest loss in the closure chain first.",
    "headline": "DL beam sharing reduces delivered throughput from 187 Mbps to 18 Mbps.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > LEO > 'leo-single-rf-blocked' 1`] = `
{
  "closure": {
    "layout": "leo-single",
    "steps": [
      {
        "input": "24.0 dB",
        "label": "RF throughput",
        "output": "187 Mbps",
        "outputMbps": 187,
        "tone": "accent",
        "transformation": "16APSK 3/4 converts RF margin into bearer rate.",
      },
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Shared capacity",
        "loss": "-151 Mbps",
        "output": "36 Mbps",
        "outputMbps": 36,
        "tone": "warn",
        "transformation": "Share beam with 14 simulated users.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Feeder (Ka)",
        "output": "36 Mbps",
        "outputMbps": 36,
        "tone": "good",
        "transformation": "Ka feeder closes with 11.5 dB margin — not limiting.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Terminal cap",
        "loss": "no loss",
        "output": "36 Mbps",
        "outputMbps": 36,
        "transformation": "Clamp to OW70L receive capability.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Protocol/handover",
        "loss": "-4 Mbps",
        "output": "32 Mbps",
        "outputMbps": 32,
        "tone": "good",
        "transformation": "Apply 1.00 handover/protocol factor.",
      },
      {
        "input": "32 Mbps",
        "inputMbps": 32,
        "label": "Delivered",
        "loss": "-14 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply final smoothing and delivery guardrails.",
      },
    ],
    "title": "LEO throughput closure",
    "type": "leo-closure",
  },
  "details": [
    {
      "sections": [
        "Beam Geometry",
        "RF Context",
        "Downlink Details",
        "Uplink Details",
        "Diagnostics",
      ],
      "summary": "Beam geometry, RF context, downlink details, uplink details, terminal assumptions, diagnostic flow and margin stack.",
      "title": "Beam, RF chain and network investigation",
    },
  ],
  "mode": "LEO",
  "quickReferences": [
    {
      "label": "Serving satellite",
      "value": "ONEWEB-TEST",
    },
    {
      "detail": "16APSK 3/4",
      "label": "RF bearer",
      "tone": "accent",
      "value": "187 Mbps",
    },
    {
      "detail": "14 simulated users",
      "label": "Beam sharing",
      "tone": "warn",
      "value": "36 Mbps",
    },
    {
      "detail": "OW70L",
      "label": "Terminal cap",
      "value": "200 Mbps",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "None",
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "latencyLabel": undefined,
    "latencyMs": undefined,
    "marginLabel": "DL 14.0 dB / UL 14.0 dB",
    "supportingMetrics": [
      {
        "label": "Final uplink",
        "tone": "accent",
        "value": "12 Mbps",
      },
    ],
    "throughputLabel": "Final downlink",
    "throughputMbps": 18,
  },
  "status": "blocked",
  "subtitle": "RF chain, beam sharing, terminal limits and final user-rate derivation for the active LEO path.",
  "title": "ONEWEB-TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "Satellite and ground path resolved",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "blocked",
        "summary": "No active RF beam at Site A does not close",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "not-evaluated",
        "summary": "Not evaluated",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "not-evaluated",
        "summary": "Not available",
      },
    ],
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "decisiveFactor": "No active RF beam at Site A",
    "diagnosticMetrics": [
      {
        "detail": "Physical-layer potential before service gates",
        "display": "187 Mbps",
        "label": "RF potential",
        "provenance": "rf-potential",
        "value": 187,
      },
      {
        "detail": "Not a deliverable service output",
        "display": "18 Mbps",
        "label": "Diagnostic estimate",
        "provenance": "diagnostic",
        "value": 18,
      },
    ],
    "headline": "Service blocked — no active rf beam at site a",
    "nextAction": "Investigate no active rf beam at site a.",
    "primaryMetrics": [],
    "state": "blocked",
    "summary": "No delivered throughput is available. Valid RF and geometry values are diagnostic only.",
    "technology": "LEO",
    "tone": "danger",
    "topology": "SINGLE_SITE",
  },
  "why": {
    "explanation": "Beam sharing changes the downlink planning rate from 187 Mbps to 36 Mbps before feeder, handover and terminal limits are applied; investigate the largest loss in the closure chain first.",
    "headline": "The active LEO path is blocked by none.",
    "tone": "danger",
  },
}
`;

exports[`M0 golden scenario matrix > LEO > 'leo-single-service-blocked-regulatory' 1`] = `
{
  "closure": {
    "layout": "leo-single",
    "steps": [
      {
        "input": "24.0 dB",
        "label": "RF throughput",
        "output": "187 Mbps",
        "outputMbps": 187,
        "tone": "accent",
        "transformation": "16APSK 3/4 converts RF margin into bearer rate.",
      },
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Shared capacity",
        "loss": "-151 Mbps",
        "output": "36 Mbps",
        "outputMbps": 36,
        "tone": "warn",
        "transformation": "Share beam with 14 simulated users.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Feeder (Ka)",
        "output": "36 Mbps",
        "outputMbps": 36,
        "tone": "good",
        "transformation": "Ka feeder closes with 11.5 dB margin — not limiting.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Terminal cap",
        "loss": "no loss",
        "output": "36 Mbps",
        "outputMbps": 36,
        "transformation": "Clamp to OW70L receive capability.",
      },
      {
        "input": "36 Mbps",
        "inputMbps": 36,
        "label": "Protocol/handover",
        "loss": "-4 Mbps",
        "output": "32 Mbps",
        "outputMbps": 32,
        "tone": "good",
        "transformation": "Apply 1.00 handover/protocol factor.",
      },
      {
        "input": "32 Mbps",
        "inputMbps": 32,
        "label": "Delivered",
        "loss": "-14 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply final smoothing and delivery guardrails.",
      },
    ],
    "title": "LEO throughput closure",
    "type": "leo-closure",
  },
  "details": [
    {
      "sections": [
        "Beam Geometry",
        "RF Context",
        "Downlink Details",
        "Uplink Details",
        "Diagnostics",
      ],
      "summary": "Beam geometry, RF context, downlink details, uplink details, terminal assumptions, diagnostic flow and margin stack.",
      "title": "Beam, RF chain and network investigation",
    },
  ],
  "mode": "LEO",
  "quickReferences": [
    {
      "label": "Serving satellite",
      "value": "ONEWEB-TEST",
    },
    {
      "detail": "16APSK 3/4",
      "label": "RF bearer",
      "tone": "accent",
      "value": "187 Mbps",
    },
    {
      "detail": "14 simulated users",
      "label": "Beam sharing",
      "tone": "warn",
      "value": "36 Mbps",
    },
    {
      "detail": "OW70L",
      "label": "Terminal cap",
      "value": "200 Mbps",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "None",
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "latencyLabel": undefined,
    "latencyMs": 72,
    "marginLabel": "DL 14.0 dB / UL 14.0 dB",
    "supportingMetrics": [
      {
        "label": "Final uplink",
        "tone": "accent",
        "value": "12 Mbps",
      },
    ],
    "throughputLabel": "Final downlink",
    "throughputMbps": 18,
  },
  "status": "available",
  "subtitle": "RF chain, beam sharing, terminal limits and final user-rate derivation for the active LEO path.",
  "title": "ONEWEB-TEST",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "Satellite and ground path resolved",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "Access link closes",
      },
      {
        "detail": "Regulatory restriction",
        "evidence": [
          {
            "label": "RF",
            "state": "passed",
            "value": "Available",
          },
          {
            "label": "Regulatory",
            "state": "blocked",
            "value": "Blocked",
          },
        ],
        "id": "service",
        "label": "Service gates",
        "state": "blocked",
        "summary": "Regulatory restriction blocks service",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "not-evaluated",
        "summary": "Not available",
      },
    ],
    "confidence": undefined,
    "confidenceBreakdown": undefined,
    "decisiveFactor": "Regulatory restriction",
    "diagnosticMetrics": [
      {
        "detail": "Physical-layer potential before service gates",
        "display": "187 Mbps",
        "label": "RF potential",
        "provenance": "rf-potential",
        "value": 187,
      },
      {
        "detail": "Not a deliverable service output",
        "display": "18 Mbps",
        "label": "Diagnostic estimate",
        "provenance": "diagnostic",
        "value": 18,
      },
    ],
    "headline": "Service blocked — regulatory restriction",
    "nextAction": "Investigate regulatory restriction.",
    "primaryMetrics": [],
    "state": "blocked",
    "summary": "No delivered throughput is available. Valid RF and geometry values are diagnostic only.",
    "technology": "LEO",
    "tone": "danger",
    "topology": "SINGLE_SITE",
  },
  "why": {
    "explanation": "Beam sharing changes the downlink planning rate from 187 Mbps to 36 Mbps before feeder, handover and terminal limits are applied; investigate the largest loss in the closure chain first.",
    "headline": "The route remains feasible; delivered throughput is 18 Mbps after sharing, network and terminal constraints.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > LEO > 'leo-site-to-site-a-to-b' 1`] = `
{
  "closure": {
    "layout": "leo-s2s",
    "steps": [
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Access A",
        "loss": "-178 Mbps",
        "output": "9 Mbps",
        "outputMbps": 9,
        "tone": "warn",
        "transformation": "Apply Site A uplink sharing, feeder and terminal constraints.",
      },
      {
        "input": "SNP-A",
        "label": "Backbone",
        "output": "60.0 ms",
        "tone": "accent",
        "transformation": "Route through indicative terrestrial backbone.",
      },
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Access B",
        "loss": "-172 Mbps",
        "output": "15 Mbps",
        "outputMbps": 15,
        "tone": "good",
        "transformation": "Apply Site B downlink sharing, feeder and terminal constraints.",
      },
      {
        "input": "9 Mbps / 15 Mbps",
        "inputMbps": 15,
        "label": "Delivered",
        "loss": "no loss",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Use the lower access throughput for the selected direction.",
      },
    ],
    "title": "LEO site-to-site closure path",
    "type": "leo-closure",
  },
  "details": [
    {
      "sections": [
        "Access A",
        "Satellite/SNP Visibility",
        "Backbone",
        "Access B",
        "Terminal Profiles",
      ],
      "summary": "Access A, satellite/SNP visibility, backbone, Access B, terminal RF profiles and detailed per-site budgets.",
      "title": "Access budgets, backbone and terminal investigation",
    },
  ],
  "mode": "LEO",
  "quickReferences": [
    {
      "detail": "Uplink via ONEWEB-TEST",
      "label": "Source access A",
      "tone": "warn",
      "value": "9 Mbps",
    },
    {
      "detail": "Downlink via ONEWEB-TEST",
      "label": "Destination access B",
      "tone": "good",
      "value": "15 Mbps",
    },
    {
      "detail": "Selected feeder endpoints",
      "label": "SNP pair",
      "value": "SNP-A / SNP-B",
    },
    {
      "detail": "60.0 ms one-way estimate",
      "label": "Ground segment",
      "value": "Core PoP",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "Site A uplink",
    "confidence": {
      "detail": undefined,
      "display": "High 88/100",
      "label": "High",
      "score": 88,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": "A → B latency",
    "latencyMs": 60,
    "marginLabel": "Access margin 14.0 dB",
    "supportingMetrics": [
      {
        "label": "Return direction",
        "value": "12 Mbps",
      },
    ],
    "throughputLabel": "A → B throughput",
    "throughputMbps": 18,
  },
  "status": "available",
  "subtitle": "Site A source · backbone · Site B destination",
  "title": "End-to-End Budget (A → B)",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "Satellite and ground path resolved",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "Access link closes",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "passed",
        "summary": "Allowed",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "passed",
        "summary": "18 Mbps delivered",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "High 88/100",
      "label": "High",
      "score": 88,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": undefined,
    "diagnosticMetrics": [],
    "headline": "Service available",
    "nextAction": undefined,
    "primaryMetrics": [
      {
        "detail": "Final rate after RF, sharing, feeder, handover, and terminal constraints",
        "display": "18 Mbps",
        "label": "A → B throughput",
        "provenance": "delivered",
        "value": 18,
      },
      {
        "detail": undefined,
        "display": "60.0 ms",
        "label": "A → B latency",
        "provenance": "delivered",
        "value": 60,
      },
    ],
    "state": "available",
    "summary": "18 Mbps delivered · 60.0 ms a → b latency.",
    "technology": "LEO",
    "tone": "good",
    "topology": "SITE_TO_SITE",
  },
  "why": {
    "explanation": "Delivered A → B throughput is 18 Mbps. Source uplink and destination downlink are compared before the SNP/backbone leg is added; investigate the lower access leg first.",
    "headline": "Both access links and the backbone close for the selected direction.",
    "tone": "good",
  },
}
`;

exports[`M0 golden scenario matrix > LEO > 'leo-site-to-site-b-to-a' 1`] = `
{
  "closure": {
    "layout": "leo-s2s",
    "steps": [
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Access B",
        "loss": "-175 Mbps",
        "output": "12 Mbps",
        "outputMbps": 12,
        "tone": "warn",
        "transformation": "Apply Site B uplink sharing, feeder and terminal constraints.",
      },
      {
        "input": "SNP-B",
        "label": "Backbone",
        "output": "62.0 ms",
        "tone": "accent",
        "transformation": "Route through indicative terrestrial backbone.",
      },
      {
        "input": "187 Mbps",
        "inputMbps": 187,
        "label": "Access A",
        "loss": "-169 Mbps",
        "output": "18 Mbps",
        "outputMbps": 18,
        "tone": "good",
        "transformation": "Apply Site A downlink sharing, feeder and terminal constraints.",
      },
      {
        "input": "12 Mbps / 18 Mbps",
        "inputMbps": 18,
        "label": "Delivered",
        "loss": "-6 Mbps",
        "output": "12 Mbps",
        "outputMbps": 12,
        "tone": "good",
        "transformation": "Use the lower access throughput for the selected direction.",
      },
    ],
    "title": "LEO site-to-site closure path",
    "type": "leo-closure",
  },
  "details": [
    {
      "sections": [
        "Access A",
        "Satellite/SNP Visibility",
        "Backbone",
        "Access B",
        "Terminal Profiles",
      ],
      "summary": "Access A, satellite/SNP visibility, backbone, Access B, terminal RF profiles and detailed per-site budgets.",
      "title": "Access budgets, backbone and terminal investigation",
    },
  ],
  "mode": "LEO",
  "quickReferences": [
    {
      "detail": "Uplink via ONEWEB-TEST",
      "label": "Source access B",
      "tone": "warn",
      "value": "12 Mbps",
    },
    {
      "detail": "Downlink via ONEWEB-TEST",
      "label": "Destination access A",
      "tone": "good",
      "value": "18 Mbps",
    },
    {
      "detail": "Selected feeder endpoints",
      "label": "SNP pair",
      "value": "SNP-A / SNP-B",
    },
    {
      "detail": "62.0 ms one-way estimate",
      "label": "Ground segment",
      "value": "Core PoP",
    },
  ],
  "resultSummary": {
    "availabilityLabel": undefined,
    "availabilityPct": null,
    "bottleneck": "Site B uplink",
    "confidence": {
      "detail": undefined,
      "display": "High 88/100",
      "label": "High",
      "score": 88,
    },
    "confidenceBreakdown": undefined,
    "latencyLabel": "B → A latency",
    "latencyMs": 62,
    "marginLabel": "Access margin 14.0 dB",
    "supportingMetrics": [
      {
        "label": "Return direction",
        "value": "18 Mbps",
      },
    ],
    "throughputLabel": "B → A throughput",
    "throughputMbps": 12,
  },
  "status": "available",
  "subtitle": "Site B source · backbone · Site A destination",
  "title": "End-to-End Budget (B → A)",
  "truth": {
    "causeChain": [
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "scenario",
        "label": "Scenario",
        "state": "passed",
        "summary": "Inputs ready",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "path",
        "label": "Path",
        "state": "passed",
        "summary": "Satellite and ground path resolved",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "rf",
        "label": "Link Budget",
        "state": "passed",
        "summary": "Access link closes",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "service",
        "label": "Service gates",
        "state": "passed",
        "summary": "Allowed",
      },
      {
        "detail": undefined,
        "evidence": undefined,
        "id": "delivery",
        "label": "Delivery",
        "state": "passed",
        "summary": "12 Mbps delivered",
      },
    ],
    "confidence": {
      "detail": undefined,
      "display": "High 88/100",
      "label": "High",
      "score": 88,
    },
    "confidenceBreakdown": undefined,
    "decisiveFactor": undefined,
    "diagnosticMetrics": [],
    "headline": "Service available",
    "nextAction": undefined,
    "primaryMetrics": [
      {
        "detail": "Final rate after RF, sharing, feeder, handover, and terminal constraints",
        "display": "12 Mbps",
        "label": "B → A throughput",
        "provenance": "delivered",
        "value": 12,
      },
      {
        "detail": undefined,
        "display": "62.0 ms",
        "label": "B → A latency",
        "provenance": "delivered",
        "value": 62,
      },
    ],
    "state": "available",
    "summary": "12 Mbps delivered · 62.0 ms b → a latency.",
    "technology": "LEO",
    "tone": "good",
    "topology": "SITE_TO_SITE",
  },
  "why": {
    "explanation": "Delivered B → A throughput is 12 Mbps. Source uplink and destination downlink are compared before the SNP/backbone leg is added; investigate the lower access leg first.",
    "headline": "Both access links and the backbone close for the selected direction.",
    "tone": "good",
  },
}
`;
